--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@okta/jwt-verifier": "0.0.14",
+    "@types/cors": "^2.8.4",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-bearer-token": "^2.2.0",
     "express-flash": "0.0.2",
     "jquery": "^3.4.1",
     "pg": "^7.14.0",
