--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-bearer-token": "^2.2.0",
     "express-flash": "0.0.2",
     "jquery": "^3.4.1",
+    "node-fetch": "^2.3.0",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2",
