--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "client",
   "version": "0.0.0",
   "scripts": {
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "@okta/okta-angular": "^1.3.0",
+    "@okta/okta-signin-widget": "^3.5.0",
     "devextreme": "19.2.4",
     "devextreme-angular": "19.2.4",
     "rxjs": "~6.4.0",
