--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "sequelize-noupdate-attributes": "^1.0.0"
   }
 }
