--- a/backend/package.json
+++ b/backend/package.json
@@ -10,18 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "@okta/jwt-verifier": "^1.0.0",
-    "@types/cors": "^2.8.4",
+    "@types/cors": "^2.8.6",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-bearer-token": "^2.2.0",
+    "express-bearer-token": "^2.4.0",
     "express-flash": "0.0.2",
     "jquery": "^3.4.1",
-    "node-fetch": "^2.3.0",
-    "pg": "^7.14.0",
+    "node-fetch": "^2.6.0",
+    "node-schedule": "^1.3.2",
+    "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2",
+    "rxjs": "^6.5.4",
+    "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
     "sequelize-noupdate-attributes": "^1.0.0"
   }
