complete backend functionality with authentication/authorization

--- a/backendSharp/appsettings.Development.json
+++ b/backendSharp/appsettings.Development.json
@@ -9,5 +9,10 @@
   },
   "ConnectionStrings": {
     "TrowooContext": "Server=localhost;Port=5432;Database=trowoo_dev_db_sharp;Username=root;Password=root"
+  },
+  "Okta": {
+    "OktaDomain": "https://dev-793026.okta.com",
+    "AuthorizationServerId": "default",
+    "Audience": "api://default"
   }
 }
