--- a/backendSharp/appsettings.json
+++ b/backendSharp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "Okta": {
+    "OktaDomain": "https://dev-793026.okta.com/oauth2/default",
+    "OktaAudience": "api://default"
+  }
 }
