--- a/backendSharp/backendSharp.csproj
+++ b/backendSharp/backendSharp.csproj
@@ -10,6 +10,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
+    <PackageReference Include="Okta.AspNetCore" Version="3.1.1" />
   </ItemGroup>
 
 
