--- a/client/package.json
+++ b/client/package.json
@@ -11,27 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.4",
-    "@angular/common": "^9.0.4",
-    "@angular/compiler": "^9.0.4",
-    "@angular/core": "^9.0.4",
-    "@angular/forms": "^9.0.4",
-    "@angular/platform-browser": "^9.0.4",
-    "@angular/platform-browser-dynamic": "^9.0.4",
-    "@angular/router": "^9.0.4",
+    "@angular/animations": "^9.0.5",
+    "@angular/common": "^9.0.5",
+    "@angular/compiler": "^9.0.5",
+    "@angular/core": "^9.0.5",
+    "@angular/forms": "^9.0.5",
+    "@angular/language-service": "^9.0.5",
+    "@angular/platform-browser": "^9.0.5",
+    "@angular/platform-browser-dynamic": "^9.0.5",
+    "@angular/router": "^9.0.5",
     "@okta/okta-angular": "^1.4.0",
-    "@okta/okta-signin-widget": "^3.8.0",
-    "devextreme": "19.2.6",
-    "devextreme-angular": "19.2.6",
+    "@okta/okta-signin-widget": "^3.8.1",
+    "devextreme": "^19.2.6",
+    "devextreme-angular": "^19.2.6",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.4",
-    "@angular/cli": "^9.0.4",
-    "@angular/compiler-cli": "^9.0.4",
-    "@angular/language-service": "^9.0.4",
+    "@angular-devkit/build-angular": "^0.900.5",
+    "@angular/cli": "^9.0.5",
+    "@angular/compiler-cli": "^9.0.5",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
