move trowoo_DarkTheme.css to node_modules

--- a/client/angular.json
+++ b/client/angular.json
@@ -24,7 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/assets/css/dx.generic.trowoo_DarkTheme.css",
+              "node_modules/devextreme/dist/css/dx.generic.trowoo_DarkTheme.css",
               "src/styles.scss"
             ],
             "scripts": []
