implement MarketDataService: quotes save in db

--- a/backendSharp/appsettings.json
+++ b/backendSharp/appsettings.json
@@ -9,5 +9,8 @@
   "Okta": {
     "OktaDomain": "https://dev-793026.okta.com/oauth2/default",
     "OktaAudience": "api://default"
+  },
+  "AlphaVantage": {
+    "ApiKey": "VZ9WDUPPPRJRN4IS"
   }
 }
