upgrade to angular@9.1.1 (ngcc regression fixed in this release)

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,6 +9,11 @@
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "paths": {
+      "jszip": [
+        "node_modules/jszip/dist/jszip.min.js"
+      ]
+    },
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": [
