--- a/client/package.json
+++ b/client/package.json
@@ -11,26 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.5",
-    "@angular/common": "^9.0.5",
-    "@angular/compiler": "^9.0.5",
-    "@angular/core": "^9.0.5",
-    "@angular/forms": "^9.0.5",
-    "@angular/language-service": "^9.0.5",
-    "@angular/platform-browser": "^9.0.5",
-    "@angular/platform-browser-dynamic": "^9.0.5",
-    "@angular/router": "^9.0.5",
+    "@angular/animations": "^9.1.1",
+    "@angular/common": "^9.1.1",
+    "@angular/compiler": "^9.1.1",
+    "@angular/core": "^9.1.1",
+    "@angular/forms": "^9.1.1",
+    "@angular/language-service": "^9.1.1",
+    "@angular/platform-browser": "^9.1.1",
+    "@angular/platform-browser-dynamic": "^9.1.1",
+    "@angular/router": "^9.1.1",
     "@okta/okta-angular": "^2.0.0",
-    "@okta/okta-signin-widget": "^3.8.2",
+    "@okta/okta-signin-widget": "^3.9.1",
     "devextreme": "^19.2.7",
     "devextreme-angular": "^19.2.7",
+    "devextreme-aspnet-data-nojquery": "^2.6.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.5",
-    "@angular/cli": "^9.0.5",
-    "@angular/compiler-cli": "^9.0.5",
+    "@angular-devkit/build-angular": "^0.901.1",
+    "@angular/cli": "^9.1.1",
+    "@angular/compiler-cli": "^9.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^13.9.5",
