--- a/client/package.json
+++ b/client/package.json
@@ -11,30 +11,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.1",
-    "@angular/common": "^9.1.1",
-    "@angular/compiler": "^9.1.1",
-    "@angular/core": "^9.1.1",
-    "@angular/forms": "^9.1.1",
-    "@angular/language-service": "^9.1.1",
-    "@angular/platform-browser": "^9.1.1",
-    "@angular/platform-browser-dynamic": "^9.1.1",
-    "@angular/router": "^9.1.1",
+    "@angular/animations": "^9.1.2",
+    "@angular/common": "^9.1.2",
+    "@angular/compiler": "^9.1.2",
+    "@angular/core": "^9.1.2",
+    "@angular/forms": "^9.1.2",
+    "@angular/platform-browser": "^9.1.2",
+    "@angular/platform-browser-dynamic": "^9.1.2",
+    "@angular/router": "^9.1.2",
     "@okta/okta-angular": "^2.0.0",
     "@okta/okta-signin-widget": "^3.9.1",
     "devextreme": "^19.2.7",
     "devextreme-angular": "^19.2.7",
-    "devextreme-aspnet-data-nojquery": "^2.6.1",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
     "tslib": "^1.11.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.1",
     "@angular/cli": "^9.1.1",
-    "@angular/compiler-cli": "^9.1.1",
+    "@angular/compiler-cli": "^9.1.2",
+    "@angular/language-service": "^9.1.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^13.9.5",
+    "@types/node": "^13.11.1",
     "codelyzer": "^5.2.2",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -43,7 +42,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5",
