THE COMMIT: full speed ahead!; add necessary style sheet and other devextreme dependencies

--- a/client/angular.json
+++ b/client/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/devextreme/dist/css/dx.material.teal.light.css",
+              "node_modules/devextreme/dist/css/dx.common.css",
+              "node_modules/devextreme/dist/css/dx.material.teal.dark.css",
               "src/styles.scss"
             ],
             "scripts": []
