--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^13.11.1",
     "codelyzer": "^5.2.2",
+    "devextreme-cli": "latest",
+    "devextreme-themebuilder": "latest",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
