--- a/client/angular.json
+++ b/client/angular.json
@@ -25,7 +25,7 @@
             ],
             "styles": [
               "node_modules/devextreme/dist/css/dx.common.css",
-              "node_modules/devextreme/dist/css/dx.material.teal.dark.css",
+              "node_modules/devextreme/dist/css/dx.material.teal.dark.compact.css",
               "src/styles.scss"
             ],
             "scripts": []
