--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@okta/okta-signin-widget": "^3.9.2",
     "devextreme": "^19.2.8",
     "devextreme-angular": "^19.2.8",
+    "font-awesome": "^4.7.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.13.0"
   },
