--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,7 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.7.5",
+    "typescript": "^3.7.5",
     "zone.js": "^0.10.3"
   }
 }
